--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=flexms
+
+server.port=8778
+
+#spring.data.web.pageable.prefix=app-
+#spring.data.web.sort.sort-parameter=app-sort
