[WIP] Add skeleton for error management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.port=8778
 
 #spring.data.web.pageable.prefix=app-
 #spring.data.web.sort.sort-parameter=app-sort
+
+app.name=${spring.application.name}
+app.instance-id=${random.uuid}
