Add error mangement through modularity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ server.port=8778
 #spring.data.web.sort.sort-parameter=app-sort
 
 app.name=${spring.application.name}
-app.instance-id=${random.uuid}
+#app.instance-id=
