--- a/flexms/pom.xml
+++ b/flexms/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>platform-app</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.emw7</groupId>
+      <artifactId>platform-log</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
     <!--endregion EMW7 -->
 
     <!--region Test -->
