Originator and caller are retrieved from http (rest) request headers

--- a/flexms/src/main/resources/application.properties
+++ b/flexms/src/main/resources/application.properties
@@ -5,5 +5,5 @@ server.port=8778
 #spring.data.web.pageable.prefix=app-
 #spring.data.web.sort.sort-parameter=app-sort
 
-app.name=${spring.application.name}
+#app.name=${spring.application.name}
 #app.instance-id=
