--- a/platform-i18n/pom.xml
+++ b/platform-i18n/pom.xml
@@ -29,6 +29,11 @@
     </dependency>
 
     <!--region EMW7 -->
+    <dependency>
+      <groupId>com.github.emw7</groupId>
+      <artifactId>platform-core</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
     <!--endregion EMW7 -->
 
     <!--region Test -->
