--- a/platform-telemetry/pom.xml
+++ b/platform-telemetry/pom.xml
@@ -27,6 +27,14 @@
       <artifactId>spring-boot-starter-logging</artifactId>
     </dependency>
 
+    <!--region EMW7 -->
+    <dependency>
+      <groupId>com.github.emw7</groupId>
+      <artifactId>platform-log</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <!--endregion EMW7 -->
+
     <!--region Test -->
     <!--endregion Test -->
   </dependencies>
