--- a/platform-rest/pom.xml
+++ b/platform-rest/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>platform-app</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.emw7</groupId>
+			<artifactId>platform-core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<!--endregion EMW7 -->
 
 		<!--region Test -->
