--- a/platform-i18n/pom.xml
+++ b/platform-i18n/pom.xml
@@ -23,11 +23,6 @@
       <artifactId>spring-boot-autoconfigure</artifactId>
     </dependency>
 
-    <!-- <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-logging</artifactId>
-    </dependency> -->
-
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-text</artifactId>
@@ -38,6 +33,11 @@
     <dependency>
       <groupId>com.github.emw7</groupId>
       <artifactId>platform-core</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.emw7</groupId>
+      <artifactId>platform-log</artifactId>
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
     <!--endregion EMW7 -->
