[#5] bunches of changes: documentation, tests, i18n labels and I18nLabel annotation, DESIGN comments

--- a/platform-error/src/main/resources/com_github_emw7_platform_error_messages.properties
+++ b/platform-error/src/main/resources/com_github_emw7_platform_error_messages.properties
@@ -1,3 +1,4 @@
-com.github.emw7.platform.request.server-error=Internal server error
+com.github.emw7.platform.error.internal-server-error=Internal server error
+com.github.emw7.platform.error.generic-error=Generic error
 
 com.github.emw7.platform.error.service-not-found=service {serviceName}@{serviceVersion}, searched by {caller}, could not be found
