--- a/platform-service-client-api/src/main/resources/com_github_emw7_platform_service_client_api_messages.properties
+++ b/platform-service-client-api/src/main/resources/com_github_emw7_platform_service_client_api_messages.properties
@@ -1,2 +1,3 @@
-com.github.emw7.platform.service.client.api.unknown-dependency-error=calling {serviceName}@{serviceVersion} service {caller} encountered an unknown error: {cause}
+com.github.emw7.platform.service.client.api.unknown-dependency-error={serviceName}@{serviceVersion} service called by {caller} answered with an unknown error: {cause}
 com.github.emw7.platform.service.client.api.unmapped-dependency-error={serviceName}@{serviceVersion} service called by {caller} answered with an error that is not mapped: {cause}
+com.github.emw7.platform.service.client.api.downstream-stack-dependency-error={serviceName}@{serviceVersion} service called by {caller} encountered an error in its dependency stack: {cause}
